--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb://127.0.0.1:27017/civilloan
+MONGO_URI=mongodb+srv://ishasmwagh1011:satbQGlW9ukcNzvO@cluster0.1aut2.mongodb.net/civilloan?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
